# btc_euro_pair_calculator

./: .flake8  .gitignore  Makefile  README.md  fix_env.sh  pyproject.toml
demo_api/: api_fetch.py  app.py  redis_connect.py  tasks.py  worker.py
tests/: test_demo_api.py
